Dia 6 - Missão prática concluída: página pessoal com foto, botão e GitHub atualizado

--- a/dia6-html-css/index.html
+++ b/dia6-html-css/index.html
@@ -16,20 +16,21 @@
   <main>
     <section>
       <h2>Sobre Mim</h2>
-      <p>Possuo conhecimento em programação intermediária a avançada com foco em frontend e backend.</p>
+      <p>Profissional apaixonado por tecnologia, com experiência em desenvolvimento de software e uma mentalidade voltada para soluções. Atuo com foco em entregar sistemas eficientes, intuitivos e escaláveis, sempre buscando inovação e aprendizado contínuo. Acredito que a tecnologia é uma ponte para transformar ideias em impacto real.</p>
     </section>
 
     <section>
       <h2>Habilidades</h2>
       <ul>
-        <li>JavaScript</li>
-        <li>Java</li>
-        <li>C#</li>
-        <li>React</li>
-        <li>HTML e CSS</li>
-        <li>Node.js</li>
-        <li>VS Code</li>
-        <li>ETC...</li>
+        <li>Desenvolvimento Web (HTML, CSS, JavaScript, React)</li>
+        <li>Lógica de Programação e Estrutura de Dados</li>
+        <li>Consumo de APIs e Integrações</li>
+        <li>Controle de Versão com Git/GitHub</li>
+        <li>Desenvolvimento Ágil (Scrum e Kanban)</li>
+        <li>Comunicação e Trabalho em Equipe</li>
+        <li>Resolução de Problemas Técnicos</li>
+        <li>Curva de Aprendizado Rápida</li>
+        <li>Dentre Outras...</li>
       </ul>
     </section>
 
@@ -45,3 +46,5 @@
   </footer>
 </body>
 </html>
+
+        
